@@ -6,6 +6,13 @@
 - fix to lexing of <%docs> tag nested in other tags
 - fix to context-arguments inside of <%include> tag which broke 
 during 0.1.4 [ticket:29]
+- added "n" filter, disables *all* filters normally applied to an expression
+via <%page> or default_filters (but not those within the filter)
+- added buffer_filters argument, defines filters applied to the return value
+of buffered/cached/filtered %defs, after all filters defined with the %def
+itself have been applied.  allows the creation of default expression filters
+that let the output of return-valued %defs "opt out" of that filtering
+via passing special attributes or objects.
   
 0.1.4
 - got defs-within-defs to be cacheable
